# Prompt2Mesh

./: .env.example  .gitignore  ARCHITECTURE.md  AUTO_BLENDER_IMPLEMENTATION.md  BLENDER_COMPATIBILITY.md  CURRENT_STATUS.md  EKS_DEPLOYMENT_CHECKLIST.md  EKS_DEPLOYMENT_SUMMARY.md  ENABLE_BLENDER_ADDON.md  LICENSE  MCP_ADDON_STATUS.md  NEXT_STEPS.md  RATE_LIMIT_GUIDE.md  README.md  SETUP_GUIDE.md  WSL_CONNECTION_SETUP.md  add_firewall_rule.ps1  addon.py  api_client.py  blender_chat.py  bob-deployment-backup.yaml  bob-deployment-updated.yaml  docker_generate_graphs.py  ecr-config.json  eks-cluster-config.yaml  generate_workflow_graphs.py  main.py  mcp_client.py  pyproject.toml  quick_enable_blender_mcp.py  reload_addon_in_blender.py  requirements.txt  steps.txt  stripTest.py  test_auto_blender.py  test_blender_connection.py  test_multi_user.py  test_simple.py  verify_fix.py
docker/: .dockerignore  .env.example  99-mcp-autostart  AUTO_START_README.md  BLENDER_ADDON_SETUP.md  README.md  auto_start_mcp.sh  backend-run.sh  blender_startup.sh  clear_scene.py  docker-compose.yml  dockerfile  enable_addon_auto.py  install_addon.sh  mcp_autostart.py  start-blender-k8s.sh
docs/: ARCHITECTURE_OVERVIEW.md  ARTISAN_AGENT_IMPROVEMENTS.md  AUTH_SETUP.md  BLENDER_COMPAT_QUICKREF.md  CLOUD_DEPLOYMENT_GUIDE.md  CONFIG_GUIDE.md  EKS_NODEGROUP_RESTART_GUIDE.md  EKS_SETUP_GUIDE.md  K8S_DEPLOYMENT.md  MCP_SERVER_AUTOSTART_FIX.md  MULTI_USER_ARCHITECTURE.md  PROMPT2MESH_CODELAB.md  QUICKSTART.md  QUICKSTART_AUTH.md  README.md  REFINEMENT_LOOP_ARCHITECTURE.md  TESTING_GUIDE.md  WSL_FIX.md
infrastructure/: ECR_SETUP.md  (+3 more)
(+171 files in other folders)
