[project]
name = "prompt2mesh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}

dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.scripts]
blender-mcp = "blender_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
"Homepage" = "https://github.com/yourusername/blender-mcp"
"Bug Tracker" = "https://github.com/yourusername/blender-mcp/issues"
