[project]
name = "prompt2mesh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}

dependencies = [
    "anthropic>=0.75.0",
    "fastapi>=0.122.0",
    "mcp[cli]>=1.3.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
    "langchain>=1.1.0",
    "langchain-anthropic>=1.2.0",
    "langchain-core>=1.1.0",
    "langgraph>=1.0.4",
    "langsmith>=0.4.49",
]

[project.scripts]
blender-mcp = "blender_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
"Homepage" = "https://github.com/yourusername/blender-mcp"
"Bug Tracker" = "https://github.com/yourusername/blender-mcp/issues"
